--- a/src/components/CodeBox.astro
+++ b/src/components/CodeBox.astro
@@ -23,7 +23,7 @@ const {code = "", language=""} = Astro.props;
 
 
 
-<pre class="hljs">
+<pre class="hljs px-3" style="white-space: pre; ">
     <code class={language != "" ? "language-" + language : ""}>
         {code}
     </code>
