--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -102,7 +102,45 @@ In 2D, the the value for <InlineEquation equation=" w " />, the distributed load
 <DisplayEquation equation="F_R = \\sqrt{{F_H}^2+{F_V}^2}" title="Resultant force from fluid pressure" background="True" id="res-force">
 </DisplayEquation>
 
-<Example title="Resultant force on a curved plate"  id="fluid-curved">
+<Image src='/Statics/FluidFigures/SlantedCurveSurf.jpg' width='7'> </Image>
+
+<Example title="Resultant force on a curved plate"  id="fluid-curved" solution="True">
+
+Find the magnitude of the resultant force from the fluid on the curved surface AB (thickness <InlineEquation equation=" t" /> of the surface <InlineEquation equation="= 2 \\ m " />). 
+Density of <InlineEquation equation=" \\text{water}  = 1000 \\ kg / m^3" />
+
+<Image src='/Statics/FluidFigures/CurvedPlateEx.jpg' width='4'> </Image>
+
+<div slot="solution">
+
+<ol>
+	<li> First, we will draw a FBD of the curved surface 
+		<Image src='/Statics/FluidFigures/CurvedPlateSol1.jpg' width='2'> </Image>
+	</li>
+	<li> This is complicated! Let's split into horizontal and vertical forces 
+		<Image src='/Statics/FluidFigures/CurvedPlateSol2.jpg' width='6'> </Image>
+	</li>
+	<li> Solve for <InlineEquation equation=" F_{R1} " /> and <InlineEquation equation=" F_{R2} " /> 
+		<DisplayEquation equation=" \\begin{aligned}   W_1 &amp;= P_1 \\ t  = \\rho \\ g \\ h_1 \\ t  \\\\     W_2 &amp;= P_2 \\ t  = \\rho \\ g \\ h_2 \\ t   \\\\   F_{R1} &amp;= W_1 \\ R  = \\rho \\ g \\ h_1 \\ t  \\ R   \\end{aligned}"  />
+		<p> Split the horizontal dist. load into a rectangle and a triangle: </p>
+		<DisplayEquation equation=" \\begin{aligned}  F_{triangle} &amp;= \\frac{1}{2} (W_2  - W_1) (R)   \\\\  &amp;= \\frac{1}{2} \\rho \\ g \\ (h_2  - h_1) \\ t \\ R   \\\\  F_{rectangle}  &amp;=  W_1 \\ R  =  \\rho \\ g \\ h_1 \\ t  \\ R   \\end{aligned}"  />
+		<DisplayEquation equation=" \\begin{aligned}  F_{R2}  &amp;= F_{triangle} +  F_{rectangle}  \\\\   &amp;= \\frac{1}{2} \\rho \\ g \\ (h_2  - h_1) \\ t \\  + \\rho \\ g \\ h_1 \\ t  \\ R   \\\\   &amp;= \\rho \\ g  \\ t  \\ R \\ [\\frac{1}{2} \\ (h_2  - h_1) + h_1]   \\\\ &amp;= \\rho \\ g  \\ t  \\ R \\ [\\frac{1}{2} \\ h_2  +  \\frac{1}{2} \\ h_1 ]  \\\\  &amp;= \\frac{1}{2} \\rho \\ g  \\ t  \\ R \\ (h_2  +  h_1)  \\end{aligned}"  />
+	</li>
+	<li> Solve for weight of water <InlineEquation equation=" W" /> 
+		<Image src='/Statics/FluidFigures/CurvedPlateSol3.jpg' width='2'> </Image>
+		<DisplayEquation equation=" \\begin{aligned}  W &amp;=  m \\ g = \\rho \\ V \\ g  \\\\   V  &amp;= \\text{volume of water} = \\frac{1}{4} \\pi \\ R^2 \\ (t)  \\\\  W  &amp;= \\rho \\frac{1}{4} \\pi \\ R^2 \\ t \\ g \\end{aligned}" />
+	</li>
+	<li> Sollve for <InlineEquation equation=" F_{H} " /> and <InlineEquation equation=" F_{V} " /> 
+		<DisplayEquation equation=" \\begin{aligned}  F_H &amp;= F_{R2} \\\\ &amp;= \\frac{1}{2} \\rho \\ g \\ t \\ R \\ (h_2 + h_1)  \\\\   &amp;=  \\frac{1}{2} (1000 \\ kg/m^2) \\ (9.81 \\ m/s^2) \\ (2 \\ m) \\ (3 \\ m) \\ (1.5 + 4.5 \\ m)  \\\\  &amp;= 177 \\ kN   \\end{aligned}" />
+		<DisplayEquation equation=" \\begin{aligned}  F_V &amp;= W + F_{R1} \\\\ &amp;= \\frac{1}{4} \\rho \\pi \\ R^2 \\ t \\ g + \\rho \\ g \\ h_1 \\ t \\ R  = \\rho \\ t \\ g \\ R (\\frac{1}{4} \\pi \\ R +  h_1  \\\\   &amp;= 1000 \\ kg/m^3 \\ (2 \\ m) \\ (9.81 \\ m/s^2) \\ (3 \\ m) [ \\frac{1}{4} \\pi \\ (3 \\ m) + 1.5 \\ m ]  \\\\ &amp;= 58,860 \\ [3.856]  \\\\   &amp;= 227 \\ kN  \\end{aligned}" />
+	</li>
+	<li> Sollve for <InlineEquation equation=" F_{R} " /> 
+		<DisplayEquation equation=" \\begin{aligned} F_R  &amp;= \\sqrt{{F_H}^2 + {F_V}^2}  \\\\  &amp;=  \\sqrt{{177 \\ kN}^2 + {227 \\ kN}^2}  \\\\  &amp;=  288 \\ kN  \\end{aligned}"  />  
+	</li>
+</ol>
+
+
+</div>
 
 </Example>
 
