--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -9,21 +9,31 @@ import Col from '../../components/Col.astro';
 
 <Layout title="About">
 
-<SubSection id="secondary-section" title="Mission">
+<SubSection id="mission" title="Mission">
        <p>  Create quality and freely accessible on-line educational materials that enhance student curiosity, connection and creates value for for both student and instructor.</p>
 </SubSection>
 
-<SubSection id="secondary-section" title="Project history">
+<SubSection id="history" title="Project history">
        <p> The course reference pages began as part of a larger college-wide effort from the University of Illinois at Urbana Champaign (UIUC) Strategic Instructional Initiatives Program (SIIP).  
               The reference pages were created using a Community of Practice (COPs) model which centers on instructors and staff committed to the collaborative development of educational resources.  
-              Initial pages for Dynamics were developed by Prof. Matt West and with the formation of the COPs have now been extended to multiple courses offered by the Department of Mechanical Science and Engineering.
+              Initial pages for Dynamics were developed in 2014 by Prof. Matt West and with the formation of the COPs have now been extended to multiple courses offered by the Department of Mechanical Science and Engineering.
               The pages are under continual development and revision by a dedicated team of faculty, graduate assistants, and undergraduate students.</p>
        <p> The working theory of the reference pages is that they should be accessible, interactive, and engaging.   </p>
 </SubSection>
 
+<Row>
+    <Col values="12 md-7">
+        <Image src='/MainFig.png' class_=""></Image>
+    </Col>
+    <Col values="12 md-5">
+        <p>Welcome to the reference pages for some of the courses taught in Mechanical Science and Engineering at the University of Illinois at Urbana-Champaign.</p>
+
+        <p>You can navigate directly to a course listed above or learn more about the reference pages including information for students and instructors by clicking on the about page to the right of the top menu bar.</p>
+    </Col>
+</Row>
 
 
-<SubSection id="secondary-section" title="Acknowledgements">
+<SubSection id="thanks" title="Acknowledgements">
        <p> Funding for the development of the course reference pages has been provided by: </p>
        <p> The Grainger College of Engineering Strategic Instructional Innovations Program</p>
         <p> Kern Family Foundation </p>
