--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -18,17 +18,21 @@ import Col from '../../components/Col.astro';
               The reference pages were created using a Community of Practice (COPs) model which centers on instructors and staff committed to the collaborative development of educational resources.  
               Initial pages for Dynamics were developed in 2014 by Prof. Matt West and with the formation of the COPs have now been extended to multiple courses offered by the Department of Mechanical Science and Engineering.
               The pages are under continual development and revision by a dedicated team of faculty, graduate assistants, and undergraduate students.</p>
-       <p> The working theory of the reference pages is that they should be accessible, interactive, and engaging.   </p>
+       <p> The reference pages have been created with the following tenants in mind:  </p>
 </SubSection>
 
 <Row>
-    <Col values="12 md-7">
+    <Col values="12 md-5">
         <Image src='/MainFig.png' class_=""></Image>
     </Col>
-    <Col values="12 md-5">
-        <p>Welcome to the reference pages for some of the courses taught in Mechanical Science and Engineering at the University of Illinois at Urbana-Champaign.</p>
-
-        <p>You can navigate directly to a course listed above or learn more about the reference pages including information for students and instructors by clicking on the about page to the right of the top menu bar.</p>
+    <Col values="12 md-7">
+        <p>Accessible: the references pages are an open resource for anyone (students, instructors, or the public) to use.  The underlying code can be accessed on our github site.</p>
+        <p>Informative: the content within the reference pages has been designed to provide critical information and concepts for students when studying for exams or working on homework. 
+              Unlike a textbook, the material is provided as a reference guide (hence the web page name!) rather than elaborating theory.</p>
+       <p>Adaptable: a web-based platform enables easy updates and editing of the reference pages.</p>
+       <p>Impactful: we have included real-world examples to help students understand the value of their engineering education and how the content connects to their future career as engineers.</p>
+       <p>Interactive: web-tools and interactive graphics assist with learning, developing intuition, and increases engagement.</p>
+       <p>Interdisciplinary: the pages link topics across multiple-courses and helps students understand the connection between courses.</p>
     </Col>
 </Row>
 
