--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -30,12 +30,24 @@ import Col from '../../components/Col.astro';
         <p>Informative: the content within the reference pages has been designed to provide critical information and concepts for students when studying for exams or working on homework. 
               Unlike a textbook, the material is provided as a reference guide (hence the web page name!) rather than elaborating theory.</p>
        <p>Adaptable: a web-based platform enables easy updates and editing of the reference pages.</p>
-       <p>Impactful: we have included real-world examples to help students understand the value of their engineering education and how the content connects to their future career as engineers.</p>
-       <p>Interactive: web-tools and interactive graphics assist with learning, developing intuition, and increases engagement.</p>
-       <p>Interdisciplinary: the pages link topics across multiple-courses and helps students understand the connection between courses.</p>
     </Col>
 </Row>
 
+<p>Impactful: we have included real-world examples to help students understand the value of their engineering education and how the content connects to their future career as engineers.</p>
+<p>Interactive: web-tools and interactive graphics assist with learning, developing intuition, and increases engagement.</p>
+<p>Interdisciplinary: the pages link topics across multiple-courses and helps students understand the connection between courses.</p>
+
+<SubSection id="team" title="The team">
+<Row>
+    <Col values="12 md-2">
+        <Image src='/MainFig.png' class_=""></Image>
+    </Col>
+    <Col values="12 md-2">
+    </Col>
+</Row>
+
+
+</SubSection>
 
 <SubSection id="thanks" title="Acknowledgements">
        <p> Funding for the development of the course reference pages has been provided by: </p>
