--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -40,7 +40,7 @@ import Col from '../../components/Col.astro';
 <SubSection id="team" title="The team">
 <Row>
     <Col values="12 md-2">
-        <Image src='/MainFig.png' class_=""></Image>
+        <Image src='/about/wayne.jpg' class_=""></Image>
     </Col>
     <Col values="12 md-2">
     </Col>
