--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -40,9 +40,16 @@ import Col from '../../components/Col.astro';
 <SubSection id="team" title="The team">
 <Row>
     <Col values="12 md-3">
-        <Image src='/about/wayne.jpg' class_=""></Image>
+        <Image src='/about/nikhil.jpg' class_=""></Image>
     </Col>
     <Col values="12 md-3">
+       <Image src='/about/wayne.jpg' class_=""></Image>
+    </Col>
+    <Col values="12 md-3">
+       <Image src='/about/tom.jpg' class_=""></Image>
+    </Col>
+<Col values="12 md-3">
+       <Image src='/about/kellie.jpg' class_=""></Image>
     </Col>
 </Row>
 
