--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -25,7 +25,7 @@ import Col from '../../components/Col.astro';
     <Col values="12 md-5">
         <Image src='/MainFig.png' class_=""></Image>
     </Col>
-    <Col values="12 md-7">
+    <Col values="12 md-5">
         <p>Accessible: the references pages are an open resource for anyone (students, instructors, or the public) to use.  The underlying code can be accessed on our github site.</p>
         <p>Informative: the content within the reference pages has been designed to provide critical information and concepts for students when studying for exams or working on homework. 
               Unlike a textbook, the material is provided as a reference guide (hence the web page name!) rather than elaborating theory.</p>
@@ -40,7 +40,7 @@ import Col from '../../components/Col.astro';
 <SubSection id="team" title="The team">
 <Row>
     <Col values="12 md-3">
-        <Image src='/about/nikhil.jpg' class_=""></Image>
+        <Image src='/about/nikhil.png' class_=""></Image>
     </Col>
     <Col values="12 md-3">
        <Image src='/about/wayne.jpg' class_=""></Image>
