--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -19,7 +19,6 @@ import Col from '../../components/Col.astro';
               Initial pages for Dynamics were developed in 2014 by Prof. Matt West and with the formation of the COPs have now been extended to multiple courses offered by the Department of Mechanical Science and Engineering.
               The pages are under continual development and revision by a dedicated team of faculty, graduate assistants, and undergraduate students.</p>
        <p> The reference pages have been created with the following tenants in mind:  </p>
-</SubSection>
 
 <Row>
     <Col values="12 md-5">
@@ -37,22 +36,27 @@ import Col from '../../components/Col.astro';
 <p>Interactive: web-tools and interactive graphics assist with learning, developing intuition, and increases engagement.</p>
 <p>Interdisciplinary: the pages link topics across multiple-courses and helps students understand the connection between courses.</p>
 
+</SubSection>
+
 <SubSection id="team" title="The team">
 <Row>
     <Col values="12 md-3">
         <Image src='/about/nikhil.png' class_=""></Image>
+       <p> Nikhil Admal </p> 
     </Col>
     <Col values="12 md-3">
        <Image src='/about/wayne.jpg' class_=""></Image>
+        <p> Wayne Chang </p>
     </Col>
     <Col values="12 md-3">
        <Image src='/about/tom.jpg' class_=""></Image>
+        <p> Tom Golecki </p>
     </Col>
 <Col values="12 md-3">
        <Image src='/about/kellie.jpg' class_=""></Image>
+        <p> Kellie Halloran </p>
     </Col>
 </Row>
-
 
 </SubSection>
 
