--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -58,6 +58,37 @@ import Col from '../../components/Col.astro';
     </Col>
 </Row>
 
+<Row>
+    <Col values="12 md-1">
+    </Col>
+    <Col values="12 md-3">
+       <Image src='/about/shelby.jpg' class_=""></Image>
+        <p> Shelby Hutchens </p>
+    </Col>
+    <Col values="12 md-3">
+       <Image src='/about/mariana.jpg' class_=""></Image>
+        <p> Mariana Kersh </p>
+    </Col>
+<Col values="12 md-3">
+       <Image src='/about/callan.jpg' class_=""></Image>
+        <p> Callan Luetkemeyer </p>
+    </Col>
+</Row>
+
+<Row>
+    <Col values="12 md-4">
+    </Col>
+    <Col values="12 md-3">
+       <Image src='/about/brian.jpg' class_=""></Image>
+        <p> Brian Mercer </p>
+    </Col>
+    <Col values="12 md-3">
+       <Image src='/about/matt.jpg' class_=""></Image>
+        <p> Matt West </p>
+    </Col>
+</Row>
+
+
 </SubSection>
 
 <SubSection id="thanks" title="Acknowledgements">
